--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
     sha256: b36a3c124622c8e1647f360424371394284f4c6c4b384593e478666c59ff42d3
 
 build:
-    number: 0
+    number: 1
     features:
         - vc9  # [win and py27]
         - vc10  # [win and py34]
@@ -22,6 +22,8 @@ requirements:
         - cmake  # [win]
         - libtool  # [not win]
         - automake  # [not win]
+        - zlib 1.2*
+    run:
         - zlib 1.2*
 
 test:
