--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "1.6.23" %}
+{% set version = "1.6.24" %}
 
 package:
     name: libpng
@@ -7,7 +7,7 @@ package:
 source:
     fn: libpng-{{ version }}.tar.gz
     url: ftp://ftp.simplesystems.org/pub/libpng/png/src/libpng16/libpng-{{ version }}.tar.gz
-    sha256: 74a9db9ddd66caa64be82bfcb3cbec4fc4394ceb1053cb7e94b2a0aa9b78eb88
+    sha256: be46e0d14ccac3800f816ae860d191a1187a40164b7552c44afeee97a9caa0a3
 
 build:
     number: 0
@@ -34,7 +34,8 @@ test:
         - test -f ${PREFIX}/lib/libpng.so  # [linux]
         - test -f ${PREFIX}/lib/libpng.dylib  # [osx]
         - libpng-config --version  # [not win]
-        - conda inspect linkages -n _test libpng  # [linux]
+        - conda inspect linkages -n _test libpng  # [not win]
+        - conda inspect objects -n _test libpng  # [osx]
 
 about:
     home: http://www.libpng.org/pub/png/libpng.html
